--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,12 +17,7 @@
                         <img src="/images/slider/slider_2.jpg" alt="Slider Image" />
                     </div>
                     <div class="container">
-                        <div class="hero-slide-content text-center text-md-end">
-                            <h5 style="color: white" class="sub-title">We keep pets for pleasure.</h5>
-                            <h2 style="color: white" class="title m-0">Vitamins For all Pets</h2>
-                            <p style="color: white">We know your concerns when you are looking for a chewing treat for your dog.</p>
-                            <a href="shop.html" class="btn btn-dark btn-hover-primary">Shop Now</a>
-                        </div>
+                        
                     </div>
                 </div>
 
@@ -31,11 +26,11 @@
                         <img src="/images/slider/slider_1.jpg" alt="Slider Image" />
                     </div>
                     <div class="container">
-                        <div class="hero-slide-content text-start">
-                            <h5 style="color: white" class="sub-title">We keep pets for pleasure.</h5>
-                            <h2 style="color: white" class="title m-0">Vitamins For all Pets</h2>
-                            <p style="color: white" class="ms-0">We know your concerns when you are looking for a chewing treat for your dog.</p>
-                            <a href="shop.html" class="btn btn-dark btn-hover-primary">Shop Now</a>
+                        <div class="hero-slide-content text-center text-md-end">
+                            <h5 style="color: white" class="sub-title">Chúng tôi tự hào là</h5>
+                            <h2 style="color: white" class="title m-0">nhà hàng phục vụ </h2>
+                            <p style="color: white">các món ăn chất lượng được chế biến từ những nguyên liệu tươi ngon nhất.</p>
+                            <!-- <a href="shop.html" class="btn btn-dark btn-hover-primary">Shop Now</a> -->
                         </div>
                     </div>
                 </div>
@@ -69,8 +64,8 @@
 
                         <!-- CTA Content Start -->
                         <div class="cta-content">
-                            <h4 class="title">Free Shipping</h4>
-                            <p>Free shipping on all order</p>
+                            <h4 class="title">Miễn phí giao hàng</h4>
+                            <p>Miễn phí giao hàng cho tất cả các đơn hàng</p>
                         </div>
                         <!-- CTA Content End -->
 
@@ -90,8 +85,8 @@
 
                         <!-- CTA Content Start -->
                         <div class="cta-content">
-                            <h4 class="title">Online Support</h4>
-                            <p>Online live support 24/7</p>
+                            <h4 class="title">Hỗ trợ Online</h4>
+                            <p>Hỗ trợ Online 24/7</p>
                         </div>
                         <!-- CTA Content End -->
 
@@ -111,8 +106,8 @@
 
                         <!-- CTA Content Start -->
                         <div class="cta-content">
-                            <h4 class="title">Money Return</h4>
-                            <p>Back guarantee under 5 days</p>
+                            <h4 class="title">Hoàn tiền</h4>
+                            <p>Đảm bảo trở lại dưới 5 ngày</p>
                         </div>
                         <!-- CTA Content End -->
 
@@ -129,7 +124,7 @@
             <div class="row">
                 <div class="col-12" data-aos="fade-up" data-aos-duration="1000">
                     <div class="section-title text-center">
-                        <h2 class="title">Popular Restaurants</h2>
+                        <h2 class="title">Nhà hàng phổ biến</h2>
                     </div>
                 </div>
             </div>
@@ -210,7 +205,7 @@
                 <!-- Tab Start -->
                 <div class="col-12">
                     <ul class="product-tab-nav nav justify-content-center m-b-n15 p-b-40 title-border-bottom">
-                        <li class="nav-item m-b-15"><a class="nav-link active" data-bs-toggle="tab" href="#tab-product-all">Bestseller</a></li>
+                        <li class="nav-item m-b-15"><a class="nav-link active" data-bs-toggle="tab" href="#tab-product-all">Món ăn bán chạy</a></li>
         
                     </ul>
                 </div>
@@ -361,7 +356,7 @@
             <div class="row" data-aos="fade-up" data-aos-duration="1000">
                 <div class="col-12">
                     <div class="section-title text-center">
-                        <h2 class="title">From Our Blog</h2>
+                        <h2 class="title">Blog của chúng tôi</h2>
                     </div>
                 </div>
             </div>
@@ -466,80 +461,7 @@
 
 
     <!-- Footer Section Start -->
-    <footer class="section footer-section">
-        <!-- Footer Top Start -->
-        <div class="footer-top bg-name-bright section-padding">
-            <div class="container">
-                <div class="row m-b-n40">
-                    <div class="col-12 col-sm-6 col-lg-3 m-b-40" data-aos="fade-up" data-aos-duration="1000">
-                        <div class="single-footer-widget">
-                            <h1 class="widget-title">About Us</h1>
-                            <p class="desc-content">Lorem ipsum dolor sit amet, co adipisi elit, sed eiusmod tempor incididunt ut labore et dolore</p>
-                            <!-- Soclial Link Start -->
-                            <div class="widget-social justify-content-start m-b-n10">
-                                <a title="Twitter" href="#/"><i class="icon-social-twitter"></i></a>
-                                <a title="Instagram" href="#/"><i class="icon-social-instagram"></i></a>
-                                <a title="Linkedin" href="#/"><i class="icon-social-linkedin"></i></a>
-                                <a title="Skype" href="#/"><i class="icon-social-skype"></i></a>
-                                <a title="Dribble" href="#/"><i class="icon-social-dribbble"></i></a>
-                            </div>
-                            <!-- Social Link End -->
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-3 m-b-40" data-aos="fade-up" data-aos-duration="1200">
-                        <div class="single-footer-widget">
-                            <h2 class="widget-title">Useful Links</h2>
-                            <ul class="widget-list">
-                                <li><a href="wishlist.html">Help & Contact Us</a></li>
-                                <li><a href="contact.html">Returns & Refunds</a></li>
-                                <li><a href="contact.html">Online Stores</a></li>
-                                <li><a href="contact.html">Terms & Conditions</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-3 m-b-40" data-aos="fade-up" data-aos-duration="1400">
-                        <div class="single-footer-widget">
-                            <h2 class="widget-title">Help</h2>
-                            <ul class="widget-list">
-                                <li><a href="wishlist.html">Wishlist</a></li>
-                                <li><a href="contact.html">Pricing Plans</a></li>
-                                <li><a href="contact.html">Order Traking</a></li>
-                                <li><a href="contact.html">Returns</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-3 m-b-40" data-aos="fade-up" data-aos-duration="1600">
-                        <div class="single-footer-widget">
-                            <h2 class="widget-title">Send newsletter</h2>
-                            <div class="widget-body">
-                                <p class="desc-content m-b-20">Subscribe to our newsletter and get 10% off your first purchase..</p>
-                                <!-- Newsletter Form Start -->
-                                <div class="newsletter-form-wrap p-t-5">
-                                    <form id="mc-form" class="mc-form">
-                                        <input type="email" id="mc-email" class="form-control email-box" placeholder="demo@example.com" name="EMAIL">
-                                        <button id="mc-submit" class="newsletter-btn" type="submit">Send</button>
-                                    </form>
-                                    <!-- mailchimp-alerts Start -->
-                                    <div class="mailchimp-alerts text-centre">
-                                        <div class="mailchimp-submitting"></div><!-- mailchimp-submitting end -->
-                                        <div class="mailchimp-success text-success"></div><!-- mailchimp-success end -->
-                                        <div class="mailchimp-error text-danger"></div><!-- mailchimp-error end -->
-                                    </div>
-                                    <!-- mailchimp-alerts end -->
-                                </div>
-                                <!-- Newsletter Form End -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Footer Top End -->
-
-        <!-- Footer Bottom Start -->
-      
-        <!-- Footer Bottom End -->
-    </footer>
+     
     <!-- Footer Section End -->
 
     <!-- Modal Start  -->
