--- a/views/register.ejs
+++ b/views/register.ejs
@@ -35,8 +35,8 @@
             </p>
         </form>
         <form class="form" id="createAccount">
-            <h1 class="form-title">SIGN IN</h1>
-            <h3 class="form-slogan">Join EcoFarm for our better farm</h3>
+            <h1 class="form-title">ĐĂNG KÝ</h1>
+            <h3 class="form-slogan">Chào mừng bạn đến nhà hàng Anh Thư</h3>
             <div class="form-message form-error"></div>
             <div class="form-input-group">
                 <label for="fullname" class="form-label">Username</label>
@@ -49,18 +49,18 @@
                 <div class="form-input-error-message"></div>
             </div>
             <div class="form-input-group">
-                <label for="signupPassword" class="form-label">Password</label>
+                <label for="signupPassword" class="form-label">Mật khẩu</label>
                 <input required type="password" id="signupPassword" class="form-input" autofocus placeholder="Password">
                 <div class="form-input-error-message"></div>
             </div>
             <div class="form-input-group">
-                <label for="signupPassword2" class="form-label">Confirmed password</label>
+                <label for="signupPassword2" class="form-label">Nhập lại mật khẩu</label>
                 <input required type="password" id="signupPassword2" class="form-input" autofocus placeholder="Confirm password">
                 <div class="form-input-error-message"></div>
             </div>
-            <button class="form-button" type="submit">Continue</button>
+            <button class="form-button" type="submit">Tiếp tục</button>
             <p class="form-text">
-                <a href="#" class="form-link" id="linkLogin">Already have an account? Sign in</a>
+                <a href="#" class="form-link" id="linkLogin">Bạn đã có tài khoản? Đăng nhập</a>
             </p>
         </form>
     </div>
