--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,400;0,700;1,300;1,400&display=swap');
 
 body {
-    --color-primary: #007706;
+    --color-primary: black;
     --color-primary-dark: #145700;
     --color-secondary: #0e3a00;
     --color-error: #cc3333;
@@ -14,7 +14,7 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 18px;
-    background: url("../img/Farm.jpg");
+    background: url("https://thumbs.dreamstime.com/b/greek-food-background-traditional-different-greek-dishes-set-greek-food-background-traditional-different-greek-dishes-set-top-view-178761927.jpg");
     background-size: cover;
 }
 
@@ -26,7 +26,7 @@ body {
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
     border-radius: var(--border-radius);
     background: rgb(188, 201, 173);
-    border: 5px solid #165f00;
+    border: 5px solid black;
 }
 
 .container,
@@ -51,7 +51,7 @@ body {
     margin-bottom: 2rem;
     text-align: center;
     font-size: 50px;
-    color: #0f3f00;
+    color:black;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: bold;
 }
@@ -60,7 +60,7 @@ body {
     margin-bottom: 2rem;
     text-align: center;
     font-size: 25px;
-    color: #0f3f00;
+    color: black;
     font-family: 'Roboto Condensed', sans-serif;
     font-style: italic;
 }
