--- a/views/admin/adminIndex.ejs
+++ b/views/admin/adminIndex.ejs
@@ -43,67 +43,7 @@
 				</div>
 			</div>
 			<!--navigation-->
-			<ul class="metismenu" id="menu">
-				<li>
-					<a href="javascript:;" class="has-arrow">
-						<div class="parent-icon"><i class='bx bx-home'></i>
-						</div>
-						<div class="menu-title">Dashboard</div>
-					</a>
-				</li>
-				<li>
-				</li>
-				<li>
-					<a href="javascript:;" class="has-arrow" href="widgets.html">
-						<div class="parent-icon"><i class='bx bx-briefcase-alt-2'></i>
-						</div>
-						<div class="menu-title">Order</div>
-					</a>
-				</li>
-				<li>
-					<a href="javascript:;" class="has-arrow">
-						<div class="parent-icon"><i class='bx bx-cart-alt' ></i>
-						</div>
-						<div class="menu-title">Reserve Table</div>
-					</a>
-				</li>
-				<li>
-					<a class="has-arrow" href="javascript:;">
-						<div class="parent-icon"><i class='bx bx-gift'></i>
-						</div>
-						<div class="menu-title">Food</div>
-					</a>
-					
-				</li>
-				<li>
-					<a class="has-arrow" href="javascript:;">
-						<div class="parent-icon"><i class='bx bx-command' ></i>
-						</div>
-						<div class="menu-title">Ingredient List</div>
-					</a>
-				</li>
-				<li>
-					<a class="has-arrow" href="javascript:;">
-						<div class="parent-icon"> <i class='bx bx-atom'></i>
-						</div>
-						<div class="menu-title">Table List</div>
-					</a>
-				</li>
-				<li>
-					<a class="has-arrow" href="javascript:;">
-						<div class="parent-icon"><i class='bx bx-hourglass' ></i>
-						</div>
-						<div class="menu-title">Types Party List</div>
-					</a>
-				</li>
-				<li>
-					<a class="has-arrow" href="javascript:;">
-						<div class="parent-icon"><i class="bx bx-grid-alt"></i>
-						</div>
-						<div class="menu-title">Statictis</div>
-					</a>
-				</li>
-			</ul>
+			<%- include('navigation.ejs') -%>
 			<!--end navigation-->
 		</div>
 		<!--end sidebar wrapper -->
