--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -1,250 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 
 <%- include('header.ejs') -%>
 
 <body>
     <!-- Header Section Start -->
-    <div class="header section">
-
-        <!-- Header Top Start -->
-        <div class="header-top bg-name-primary">
-            <div class="container">
-                <div class="row align-items-center">
-
-                    <!-- Header Top Message Start -->
-                    
-                    
-
-                </div>
-            </div>
-        </div>
-        <!-- Header Top End -->
-
-        <!-- Header Bottom Start -->
-        <div class="header-bottom">
-            <div class="header-sticky">
-                <div class="container">
-                    <div class="row align-items-center position-relative">
-
-                        <!-- Header Logo Start -->
-                        <div class="col-lg-3 col-md-4 col-6">
-                            <div class="header-logo">
-                                <a href="index.html"><img src="assets/images/logo/logo.png" alt="Site Logo" /></a>
-                            </div>
-                        </div>
-                        <!-- Header Logo End -->
-
-                        <!-- Header Menu Start -->
-                        <div class="col-lg-6 d-none d-lg-block">
-                            <div class="main-menu">
-                                <ul>
-                                    <li class="has-children">
-                                        <a href="index-3.html">Trang chủ</a>
-                                        <!-- <ul class="sub-menu">
-                                            <li><a href="index.html">Home 1</a></li>
-                                            <li><a href="index-2.html">Home 2</a></li>
-                                            <li><a href="index-3.html">Home 3</a></li>
-                                            <li><a href="index-4.html">Home 4</a></li>
-                                        </ul> -->
-                                    </li>
-                                    <li class="has-children position-static">
-                                        <a href="#">Nhà hàng</a>
-                                        <ul class="mega-menu">
-                                            <li class="mega-menu-col">
-                                                <ul class="m-b-n10">
-                                                    <li><a href="#">Hệ thống nhà hàng phố 79</a></li>
-                                                    <li><a href="#">Chuỗi Ân Nam Quán</a></li>
-                                                    <li><a href="#">Nhà hàng sườn nướng Hàn Quốc</a></li>
-                                                    <li><a href="#">Chuỗi Lẫu Cua Đất Mũi</a></li>
-                                                    <li><a href="#">Nhà hàng EON 51</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="mega-menu-col">
-                                                <ul class="m-b-n10">
-                                                    <li><a href="#">Nhà hàng Út Cà Mau</a></li>
-                                                    <li><a href="#">Buffet Hoàng Yến</a></li>
-                                                    <li><a href="#">Hàng Dương Quán</a></li>
-                                                    <li><a href="#">Nhà hàng Gạo</a></li>
-                                                    <li><a href="#">Chuỗi King BBQ - Vua nướng Korea</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="mega-menu-col">
-                                                <ul class="m-b-n10">
-                                                    <li><a href="#">Soa soa</a></li>
-                                                    <li><a href="#">Quê nhà</a></li>
-                                                    <li><a href="#">Red Chilli Sea Food</a></li>
-                                                    <li><a href="#">Chuỗi San Fu Lou</a></li>
-                                                    <li><a href="#">Chuỗi Dìn Kí</a></li>
-                                                   
-                                                </ul>
-                                            </li>
-                                            <li class="mega-menu-col">
-                                                <ul class="m-b-n10">
-                                                    <li><a href="#">Soa soa</a></li>
-                                                    <li><a href="#">Quê nhà</a></li>
-                                                    <li><a href="#">Red Chilli Sea Food</a></li>
-                                                    <li><a href="#">Chuỗi San Fu Lou</a></li>
-                                                    <li><a href="#">Chuỗi Dìn Kí</a></li>
-                                                   
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="has-children">
-                                        <a href="#">Giới thiệu</a>
-                                    </li>
-                                    <li class="has-children">
-                                        <a href="#">Liên hệ</a>
-                                    </li>
-                                   
-                                </ul>
-                            </div>
-                        </div>
-                        <!-- Header Menu End -->
-
-                        <!-- Header Action Start -->
-                        <div class="col-lg-3 col-md-8 col-6">
-                            <div class="header-actions">
-
-                                <!-- Header Action Search Button Start -->
-                                <div class="header-action-btn header-action-btn-search d-none d-md-flex">
-                                    <div class="action-execute">
-                                        <a class="action-search-open" href="javascript:void(0)"><i class="icon-magnifier icons"></i></a>
-                                        <a class="action-search-close" href="javascript:void(0)"><i class="ti-close"></i></a>
-                                    </div>
-                                    <!-- Search Form and Button Start -->
-                                    <form class="header-search-form" action="#">
-                                        <input type="text" class="header-search-input" placeholder="Search Our Store">
-                                        <button class="header-search-button"><i class="icon-magnifier icons"></i></button>
-                                    </form>
-                                    <!-- Search Form and Button End -->
-                                </div>
-                                <!-- Header Action Search Button End -->
-
-                                <!-- Header My Account Button Start -->
-                                <a href="my-account.html" class="header-action-btn header-action-btn-wishlist">
-                                    <i class="icon-user icons"></i>
-                                </a>
-                                <!-- Header My Account Button End -->
-
-                                <!-- Header Action Button Start -->
-                                <div class="header-action-btn header-action-btn-cart d-none d-sm-flex">
-                                    <a class="cart-visible" href="javascript:void(0)">
-                                        <i class="icon-handbag icons"></i>
-                                        <span class="header-action-num">3</span>
-                                    </a>
-
-                                    <!-- Header Cart Content Start -->
-                                    <div class="header-cart-content">
-
-                                        <!-- Cart Procut Wrapper Start  -->
-                                        <div class="cart-product-wrapper">
-
-                                            <!-- Cart Product/Price Start -->
-                                            <div class="cart-product-inner p-b-20 m-b-20 border-bottom">
-
-                                                <!-- Single Cart Product Start -->
-                                                <div class="single-cart-product">
-                                                    <div class="cart-product-thumb">
-                                                        <a href="single-product.html"><img src="assets/images/header/header-cart/1.png" alt="Cart Product"></a>
-                                                    </div>
-                                                    <div class="cart-product-content">
-                                                        <h3 class="title"><a href="single-product.html">Basic Dog Trainning</a></h3>
-                                                        <div class="product-quty-price">
-                                                            <span class="cart-quantity">Qty: <strong> 1 </strong></span>
-                                                            <span class="price">
-															<span class="new">$70.00</span>
-                                                            </span>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <!-- Single Cart Product End -->
-
-                                                <!-- Product Remove Start -->
-                                                <div class="cart-product-remove">
-                                                    <a href="#/"><i class="icon-close"></i></a>
-                                                </div>
-                                                <!-- Product Remove End -->
-
-                                            </div>
-                                            <!-- Cart Product/Price End -->
-
-                                            <!-- Cart Product/Price Start -->
-                                            <div class="cart-product-inner p-b-20 m-b-20 border-bottom">
-
-                                                <!-- Single Cart Product Start -->
-                                                <div class="single-cart-product">
-                                                    <div class="cart-product-thumb">
-                                                        <a href="single-product.html"><img src="assets/images/header/header-cart/2.png" alt="Cart Product"></a>
-                                                    </div>
-                                                    <div class="cart-product-content">
-                                                        <h3 class="title"><a href="single-product.html">Wait, You Need This</a></h3>
-                                                        <div class="product-quty-price">
-                                                            <span class="cart-quantity">Qty: <strong> 1 </strong></span>
-                                                            <span class="price">
-															<span class="new">$80.00</span>
-                                                            </span>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <!-- Single Cart Product End -->
-
-                                                <!-- Product Remove Start -->
-                                                <div class="cart-product-remove">
-                                                    <a href="#/"><i class="icon-close"></i></a>
-                                                </div>
-                                                <!-- Product Remove End -->
-
-                                            </div>
-                                            <!-- Cart Product/Price End -->
-
-                                        </div>
-                                        <!-- Cart Procut Wrapper -->
-
-                                        <!-- Cart Product Total Start -->
-                                        <div class="cart-product-total p-b-20 m-b-20 border-bottom">
-                                            <span class="value">Total</span>
-                                            <span class="price">200$</span>
-                                        </div>
-                                        <!-- Cart Product Total End -->
-
-                                        <!-- Cart Product Button Start -->
-                                        <div class="cart-product-btn m-t-20">
-                                            <a href="cart.html" class="btn btn-outline-light btn-hover-primary w-100">View cart</a>
-                                            <a href="checkout.html" class="btn btn-outline-light btn-hover-primary w-100 m-t-20">Checkout</a>
-                                        </div>
-                                        <!-- Cart Product Button End -->
-
-                                    </div>
-                                    <!-- Header Cart Content End -->
-
-                                </div>
-                                <div class="header-action-btn header-action-btn-cart d-flex d-sm-none">
-                                    <a href="cart.html">
-                                        <i class="icon-handbag icons"></i>
-                                        <span class="header-action-num">3</span>
-                                    </a>
-                                </div>
-                                <!-- Header Action Button End -->
-
-                                <!-- Mobile Menu Hambarger Action Button Start -->
-                                <a href="javascript:void(0)" class="header-action-btn header-action-btn-menu d-lg-none d-md-flex">
-                                    <i class="icon-menu"></i>
-                                </a>
-                                <!-- Mobile Menu Hambarger Action Button End -->
-
-                            </div>
-                        </div>
-                        <!-- Header Action End -->
-
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Header Bottom End -->
-
-    </div>
+    <%- include('header_section.ejs') -%>
     <!-- Header Section End -->
 
     <!-- Breadcrumb Area Start -->
