--- a/views/admin/ingredientList.ejs
+++ b/views/admin/ingredientList.ejs
@@ -320,7 +320,7 @@
 								<thead class="table-light">
 									<tr>
 										<th>STT</th>
-										<th>Tên món ăn</th>
+										<th>Tên thành phần</th>
 										<th>Xem chi tiết</th>
 										<th>Actions</th>
 									</tr>
