--- a/views/admin/tableList.ejs
+++ b/views/admin/tableList.ejs
@@ -320,7 +320,7 @@
 								<thead class="table-light">
 									<tr>
 										<th>STT</th>
-										<th>Tên món ăn</th>
+										<th>Tên bàn</th>
 										<th>Bàn số</th>
 										<th>Actions</th>
 									</tr>
